vlib/v/checker/tests/enum_field_value_duplicate_c.vv
pub enum HardwareAccelerationDevice as i64 {
	@none       = 0
	cpu         = (1 << 0)
	gpu         = (1 << 1)
	accelerator = (1 << 2)
	default     = (1 << 0)
	all         = 0xFFFFFFFF
}

fn main() {
	device := HardwareAccelerationDevice.@none
	println(device)
}
